# lighter-prover

./: .gitignore  Cargo.toml  LICENSE  README.md  THIRD_PARTY_NOTICES  build_circuits.sh  go.mod  go.sum  rust-toolchain
circuit/: Cargo.toml
circuit/src/: apply_trade.rs  block.rs  block_constraints.rs  block_pre_execution.rs  block_pre_execution_constraints.rs  block_tx.rs  block_tx_chain.rs  block_tx_chain_constraints.rs  block_tx_constraints.rs  bool_utils.rs  circuit_logger.rs  circuit_serializer.rs  deserializers.rs  hash_utils.rs  lib.rs  liquidation.rs  matching_engine.rs  merkle_helpers.rs  order_book_tree_helpers.rs  poseidon2.rs  quintuple.rs  tx.rs  tx_constraints.rs  tx_interface.rs  utils.rs
circuit/src/bigint/: bigint.rs  biguint.rs  comparison.rs  div_rem.rs  mod.rs
circuit/src/bigint/big_u16/: bigint_u16.rs  biguint_u16.rs  mod.rs
circuit/src/bigint/unsafe_big/: mod.rs
circuit/src/blob/: blob_constraints.rs  blob_domain.rs  blob_polynomial.rs  bls12_381_scalar_field.rs  constants.rs  evaluate_bitstream.rs  mod.rs  roots_of_unity.rs
circuit/src/builder/: custom.rs  delegated.rs  mod.rs  types.rs
circuit/src/byte/: mod.rs  split.rs  split_gate.rs
circuit/src/comparison/: mod.rs  subtractive_comparison.rs
circuit/src/delta/: account_delta_full_leaf.rs  cyclic_delta_circuit.rs  delta_constraints.rs  evaluate_sequence.rs  mod.rs  types.rs  utils.rs
circuit/src/ecdsa/: mod.rs
circuit/src/ecdsa/curve/: curve_adds.rs  curve_msm.rs  curve_multiplication.rs  curve_summation.rs  curve_types.rs  ecdsa.rs  glv.rs  mod.rs  secp256k1.rs
circuit/src/ecdsa/gadgets/: curve.rs  curve_fixed_base.rs  curve_msm.rs  curve_windowed_mul.rs  ecdsa.rs  glv.rs  mod.rs
circuit/src/eddsa/: macros.rs  mod.rs  schnorr.rs
circuit/src/eddsa/curve/: base_field.rs  curve.rs  mod.rs  mul_table.rs  scalar_field.rs  test_utils.rs
circuit/src/eddsa/gadgets/: base_field.rs  curve.rs  mod.rs  scalar_field.rs
circuit/src/hints/: mod.rs
circuit/src/keccak/: constants.rs  helpers.rs  keccak.rs  mod.rs
circuit/src/nonnative/: mod.rs  split_nonnative.rs
circuit/src/poseidon_bn128/: field.rs  mod.rs  plonky2_config.rs  poseidon_bn128.rs  poseidon_bn128_constants.rs
circuit/src/recursion/: batch.rs  block_witness.rs  cyclic_circuit.rs  mod.rs  wrapper_circuit.rs
circuit/src/signed/: mod.rs  signed_target.rs
circuit/src/transactions/: internal_cancel_all_orders.rs  internal_cancel_order.rs  internal_claim_order.rs  internal_create_order.rs  internal_deleverage.rs  internal_exit_position.rs  internal_liquidate_position.rs  l1_burn_shares.rs  l1_cancel_all_orders.rs  l1_change_pubkey.rs  l1_create_market.rs  l1_create_order.rs  l1_deposit.rs  l1_register_asset.rs  l1_update_asset.rs  l1_update_market.rs  l1_withdraw.rs  l2_burn_shares.rs  l2_cancel_all_orders.rs  l2_cancel_order.rs  l2_change_pubkey.rs  l2_create_grouped_orders.rs  l2_create_order.rs  l2_create_public_pool.rs  l2_create_sub_account.rs  l2_mint_shares.rs  l2_modify_order.rs  l2_transfer.rs  l2_update_leverage.rs  l2_update_margin.rs  l2_update_public_pool.rs  l2_withdraw.rs  mod.rs  tx_utils.rs
circuit/src/types/: account_asset.rs  account_order.rs  account_order_type.rs  api_key.rs  asset.rs  change_pub_key.rs  config.rs  constants.rs  market.rs  market_details.rs  mod.rs  order.rs  order_book_node.rs  price_updates.rs  public_pool.rs  quintuple.rs  risk_info.rs  state_metadata.rs  target_pub_data_helper.rs  transfer.rs  tx_state.rs  tx_type.rs
circuit/src/uint/: mod.rs  range_check.rs
snark/: main.go
(+50 files in other folders)
